update mnist code

--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -119,20 +119,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'property' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\Strad\\Personal\\image_classification_scratch\\mnist.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Strad/Personal/image_classification_scratch/mnist.ipynb#ch0000016?line=4'>5</a>\u001b[0m loss \u001b[39m=\u001b[39m keras\u001b[39m.\u001b[39mlosses\u001b[39m.\u001b[39mCategoricalCrossentropy()\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Strad/Personal/image_classification_scratch/mnist.ipynb#ch0000016?line=5'>6</a>\u001b[0m metrics \u001b[39m=\u001b[39m [keras\u001b[39m.\u001b[39mmetrics\u001b[39m.\u001b[39mCategoricalAccuracy]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Strad/Personal/image_classification_scratch/mnist.ipynb#ch0000016?line=8'>9</a>\u001b[0m model\u001b[39m.\u001b[39;49mcompile(loss\u001b[39m=\u001b[39;49mloss, optimizer\u001b[39m=\u001b[39;49moptimizer, metrics\u001b[39m=\u001b[39;49mmetrics)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Strad/Personal/image_classification_scratch/mnist.ipynb#ch0000016?line=10'>11</a>\u001b[0m model\u001b[39m.\u001b[39mfit(x_train, y_train, epochs\u001b[39m=\u001b[39mepochs)\n",
-      "File \u001b[1;32mc:\\Users\\user\\anaconda3\\envs\\machine_learning\\lib\\site-packages\\keras\\utils\\traceback_utils.py:67\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     65\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:  \u001b[39m# pylint: disable=broad-except\u001b[39;00m\n\u001b[0;32m     66\u001b[0m   filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[1;32m---> 67\u001b[0m   \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m     68\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m     69\u001b[0m   \u001b[39mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32mc:\\Users\\user\\anaconda3\\envs\\machine_learning\\lib\\site-packages\\keras\\engine\\training.py:3101\u001b[0m, in \u001b[0;36mModel._validate_compile\u001b[1;34m(self, optimizer, metrics, **kwargs)\u001b[0m\n\u001b[0;32m   3099\u001b[0m strategy \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdistribute_strategy\n\u001b[0;32m   3100\u001b[0m \u001b[39mfor\u001b[39;00m metric \u001b[39min\u001b[39;00m tf\u001b[39m.\u001b[39mnest\u001b[39m.\u001b[39mflatten(metrics):\n\u001b[1;32m-> 3101\u001b[0m   \u001b[39mfor\u001b[39;00m v \u001b[39min\u001b[39;00m \u001b[39mgetattr\u001b[39m(metric, \u001b[39m'\u001b[39m\u001b[39mvariables\u001b[39m\u001b[39m'\u001b[39m, []):\n\u001b[0;32m   3102\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m strategy\u001b[39m.\u001b[39mextended\u001b[39m.\u001b[39mvariable_created_in_scope(v):\n\u001b[0;32m   3103\u001b[0m       \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   3104\u001b[0m           \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mMetric (\u001b[39m\u001b[39m{\u001b[39;00mmetric\u001b[39m}\u001b[39;00m\u001b[39m) passed to `model.compile` was created inside \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m   3105\u001b[0m           \u001b[39m'\u001b[39m\u001b[39ma different distribution strategy scope than the model. All \u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   3110\u001b[0m           \u001b[39m'\u001b[39m\u001b[39mstrategy scope.\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m   3111\u001b[0m       )\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'property' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/15\n",
+      "1875/1875 [==============================] - 16s 8ms/step - loss: 0.0210 - categorical_accuracy: 0.9934\n",
+      "Epoch 2/15\n",
+      "1875/1875 [==============================] - 12s 6ms/step - loss: 0.0172 - categorical_accuracy: 0.9943\n",
+      "Epoch 3/15\n",
+      "1875/1875 [==============================] - 12s 7ms/step - loss: 0.0192 - categorical_accuracy: 0.9936\n",
+      "Epoch 4/15\n",
+      "1875/1875 [==============================] - 13s 7ms/step - loss: 0.0188 - categorical_accuracy: 0.9936\n",
+      "Epoch 5/15\n",
+      "1875/1875 [==============================] - 10s 5ms/step - loss: 0.0181 - categorical_accuracy: 0.9934\n",
+      "Epoch 6/15\n",
+      "1875/1875 [==============================] - 10s 5ms/step - loss: 0.0176 - categorical_accuracy: 0.9940\n",
+      "Epoch 7/15\n",
+      "1875/1875 [==============================] - 10s 5ms/step - loss: 0.0163 - categorical_accuracy: 0.9943\n",
+      "Epoch 8/15\n",
+      "1875/1875 [==============================] - 10s 5ms/step - loss: 0.0176 - categorical_accuracy: 0.9942\n",
+      "Epoch 9/15\n",
+      "1875/1875 [==============================] - 11s 6ms/step - loss: 0.0180 - categorical_accuracy: 0.9940\n",
+      "Epoch 10/15\n",
+      "1875/1875 [==============================] - 11s 6ms/step - loss: 0.0157 - categorical_accuracy: 0.9946\n",
+      "Epoch 11/15\n",
+      "1184/1875 [=================>............] - ETA: 4s - loss: 0.0158 - categorical_accuracy: 0.9945"
      ]
     }
    ],
@@ -152,15 +167,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test loss: 0.02446661703288555\n",
-      "Test accuracy: 0.9925000071525574\n"
+      "Test loss: 0.02662009932100773\n",
+      "Test accuracy: 0.9932000041007996\n"
      ]
     }
    ],
